<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Market</string>
    <string name="action_settings">Settings</string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="button_login">登录</string>
    <string name="button_signup">注册</string>
    <string name="register_account">用户名</string>
    <string name="register_pwd">密码</string>
    <string name="register_confirm">确认</string>
    <string name="register_stuno">学号</string>
    <string name="register_gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="register_email">邮箱</string>
    <string name="register_phone">手机</string>
    <string name="register_label1">账号注册</string>
    <string name="register_label2">个人资料</string>
    <string name="register_button_ok">提交</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="register_button_cancel">取消</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_catagory">分类</string>
    <string name="main_navigation_car">随便逛</string>
    <string name="main_navigation_me">个人中心</string>
    <string name="image_descrption">contentDescription</string>
    <string name="shopping_car">购物车</string>
    <string name="storage">仓库</string>
    <string name="account_info">账号信息</string>
    <string name="usr_info">账号信息</string>
    <string name="save">保存</string>
    <string name="reset">重置</string>
    <string name="all_categories">全部分类</string>
    <string name="GoodsInfo">物品信息</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_my_goods">MyGoodsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_goods">AddGoodsActivity</string>
    <string name="title_activity_my_goods_info">MyGoodsInfoActivity</string>

</resources>
