<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/top_background"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:textSize="@dimen/topbar_text"
            android:textColor="#ffffff" />

    </LinearLayout>
    <!-- 账号信息 -->

    <RelativeLayout
        android:id="@+id/register_account_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="75.0dip"
        android:background="@drawable/shape_bg" >

        <LinearLayout
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_UN"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="text" />
        </LinearLayout>

        <ImageView
            android:id="@+id/register_line1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/register_account"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/register_line1"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_pwd"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_PWD"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>

        <ImageView
            android:id="@+id/register_line2"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/register_pwd"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/register_line2"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_confirm"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Confirm_PWD"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 个人资料 -->

    <RelativeLayout
        android:id="@+id/register_user_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_account_info"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/shape_bg" >

        <LinearLayout
            android:id="@+id/register_stuno"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_stuno"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/StuNo"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="text" />
        </LinearLayout>

        <ImageView
            android:id="@+id/register_line3"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/register_stuno"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/register_sex"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/register_line3"
            android:orientation="horizontal"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/register_gender"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dip"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="70dp"
                    android:layout_height="40dip"
                    android:text="@string/male"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:text="@string/female"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:id="@+id/register_line4"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/register_sex"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/register_line4"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Mail"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="text" />
        </LinearLayout>

        <ImageView
            android:id="@+id/register_line5"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/register_email"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/register_line5"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="phone" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Button OK/Cancel -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_user_info"
        android:layout_marginTop="30dip"
        android:gravity="center" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:text="@string/register_button_cancel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:text="@string/register_button_ok" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_user_info"
        android:layout_below="@+id/register_account_info"
        android:layout_marginTop="15dp"
        android:text="@string/register_label2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_account_info"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:text="@string/register_label1" />

</RelativeLayout>