<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_alignParentBottom="true" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <FrameLayout 
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="0.0dip"
			android:layout_weight="1.0" />
        <TabWidget 
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />
        <LinearLayout 
            android:id="@+id/bottom_tray"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/tray_background"
            android:orientation="horizontal" >
            <RadioGroup 
                android:id="@+id/tray_items"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/tray_background"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingTop="2.0dip" >
                <RadioButton 
                    android:id="@+id/tray_home"
                    style="@style/main_tab_bottom"
                    android:checked="true"
                    android:drawableTop="@drawable/main_navigation_home"
                    android:text="@string/main_navigation_home" />
                <RadioButton
                    android:id="@+id/tray_ease"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/main_navigation_car"
                    android:text="@string/main_navigation_car" />
                <RadioButton
                    android:id="@+id/tray_category"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/main_navigation_catagory"
                    android:text="@string/main_navigation_catagory" />
                <RadioButton
                    android:id="@+id/tray_me"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/main_navigation_personal"
                    android:text="@string/main_navigation_me" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</TabHost>