<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/me_usr_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:id="@+id/me_usr_info_topbar"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/top_background"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_label2"
            android:textSize="@dimen/topbar_text"
            android:textColor="#ffffff" />
    </LinearLayout>
    <!-- 账号信息 -->

    <RelativeLayout
        android:id="@+id/me_usr_info_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="75.0dip"
        android:background="@drawable/shape_bg" >

        <LinearLayout
            android:id="@+id/me_usr_account"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:textColor="@color/black" 
                android:layout_marginTop="12dip"/>

            <TextView
                android:id="@+id/personal_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:layout_marginLeft="50dip"
                android:text="lxyu0405"
                android:textColor="#cccccc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/me_usr_line1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/me_usr_account"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/me_usr_pwd"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/me_usr_line1"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_pwd"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/personal_pwd"
                android:layout_width="0dip"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>

        <ImageView
            android:id="@+id/me_usr_line2"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/me_usr_pwd"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/me_usr_line2"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_confirm"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/personal_confirm"
                android:layout_width="0dip"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 个人资料 -->

    <RelativeLayout
        android:id="@+id/me_usr_info_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/me_usr_info_account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/shape_bg" >

        <LinearLayout
            android:id="@+id/me_usr_stuno"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_stuno"
                android:textColor="@color/black"
                android:layout_marginTop="12dip" />

            <TextView
                android:id="@+id/personal_stuno"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="12dip"
                android:layout_marginLeft="50dip"
                android:text="b111220077"
                android:textColor="#cccccc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/me_usr_line3"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/me_usr_stuno"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/me_usr_sex"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/me_usr_line3"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:text="@string/register_gender"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/personal_sex"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="12dip"
                android:layout_marginLeft="50dip"
                android:text="男"
                android:textColor="#cccccc" />

        </LinearLayout>

        <ImageView
            android:id="@+id/me_usr_line4"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/me_usr_sex"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/me_usr_email"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/me_usr_line4"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/personal_mail"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:background="@null"
                android:inputType="text" />
        </LinearLayout>

        <ImageView
            android:id="@+id/me_usr_line5"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/me_usr_email"
            android:background="@drawable/login_line"
            android:contentDescription="@string/image_descrption" />

        <LinearLayout
            android:id="@+id/me_usr_phone"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_below="@id/me_usr_line5"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/register_phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/personal_phone"
                android:layout_width="0dp"
                android:layout_height="42dip"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:background="@null"
                android:inputType="phone" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Button OK/Cancel -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/me_usr_info_user"
        android:layout_marginTop="30dip"
        android:gravity="center" >

        <Button
            android:id="@+id/reset"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:text="@string/reset" />

        <Button
            android:id="@+id/save"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:text="@string/save" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/me_usr_info_account"
        android:layout_below="@+id/me_usr_info_account"
        android:layout_marginTop="15dp"
        android:text="@string/usr_info" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/me_usr_info_account"
        android:layout_below="@id/me_usr_info_topbar"
        android:layout_marginTop="10dp"
        android:text="@string/account_info" />

</RelativeLayout>