<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#eeeeee">
    
    <RelativeLayout
        android:layout_marginTop="30dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:id="@+id/input_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="30.0dip"
            android:background="@drawable/shape_bg">
            <LinearLayout 
                android:id="@+id/input_account"
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:paddingLeft="10dip">
                <TextView 
                    android:layout_width="40dip"
                    android:layout_height="wrap_content"
                    android:textColor="#cccccc"
                    android:text="@string/login_account"/>
                <EditText 
                    android:id="@+id/Editusername"
                    android:layout_width="0dp"
                    android:layout_height="42dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@null"/>
            </LinearLayout>
            <ImageView 
                android:id="@+id/input_center_line"
                android:layout_below="@id/input_account"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:contentDescription="@string/image_descrption"
                android:background="@drawable/login_line"/>
            <LinearLayout 
                android:layout_below="@id/input_center_line"
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:paddingLeft="10dip">
                <TextView 
                    android:layout_width="40dip"
                    android:layout_height="wrap_content"
                    android:textColor="#cccccc"
                    android:text="@string/login_pwd"/>
                <EditText 
                    android:id="@+id/Editpw"
                    android:inputType="textPassword"
                    android:layout_width="0dp"
                    android:layout_height="42dip"
                    android:layout_weight="1"
                    android:background="@null"/>
            </LinearLayout>
        </RelativeLayout>
		<LinearLayout 
		    android:layout_below="@id/input_edit_text"
		    android:id="@+id/login_button"
		    android:layout_marginTop="20dip"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center">
            <Button 
                android:layout_width="270dip"
                android:layout_height="40dip"
                android:id="@+id/login"
                android:text="@string/button_login"
                android:background="@color/deep_blue"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_below="@id/login_button"
		    android:id="@+id/signup_button"
		    android:layout_marginTop="12dip"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center">
            <Button 
                android:id="@+id/signin"            
                android:layout_width="270dip"
                android:layout_height="40dip"
                android:text="@string/button_signup"/>
		</LinearLayout>
    </RelativeLayout>

</LinearLayout>